dependencies/kelivo_secure_core/native/include/kelivo_secure_core.h

typedef int32_t KelivoStatus;
#define KELIVO_CORE_ABI_VERSION UINT32_C(15)
#define KELIVO_CORE_CAPABILITIES_STRUCT_SIZE UINT32_C(32)
#define KELIVO_KEY_SLOT_ID_SIZE ((size_t)16)
#define KELIVO_KEY_POLICY_VERSION UINT32_C(1)
#define KELIVO_INVALID_KEY_HANDLE UINT64_C(0)
#define KELIVO_STATUS_OK INT32_C(0)
#define KELIVO_STATUS_NULL_POINTER INT32_C(1)
#define KELIVO_STATUS_INVALID_SLOT_ID_LENGTH INT32_C(2)
#define KELIVO_STATUS_UNSUPPORTED_POLICY INT32_C(3)
#define KELIVO_STATUS_INVALID_KEY_HANDLE INT32_C(4)
#define KELIVO_STATUS_OUTPUT_BUFFER_TOO_SMALL INT32_C(5)
#define KELIVO_STATUS_SLOT_NOT_FOUND INT32_C(6)
#define KELIVO_STATUS_SLOT_ALREADY_EXISTS INT32_C(7)
#define KELIVO_STATUS_SLOT_DATA_INVALID INT32_C(8)
#define KELIVO_STATUS_SLOT_UNWRAP_FAILED INT32_C(9)
#define KELIVO_STATUS_SECURE_STORAGE_UNAVAILABLE INT32_C(10)
#define KELIVO_STATUS_RANDOM_SOURCE_FAILURE INT32_C(11)
#define KELIVO_STATUS_IO_FAILURE INT32_C(12)
#define KELIVO_STATUS_INTERNAL_STATE INT32_C(13)
#define KELIVO_STATUS_INVALID_RECORD_ID_LENGTH INT32_C(14)
#define KELIVO_STATUS_INVALID_ARGUMENT INT32_C(15)
#define KELIVO_STATUS_RECORD_ENVELOPE_INVALID INT32_C(16)
#define KELIVO_STATUS_RECORD_AUTHENTICATION_FAILED INT32_C(17)
#define KELIVO_STATUS_INPUT_TOO_LARGE INT32_C(18)
#define KELIVO_STATUS_SQLCIPHER_KEY_FAILED INT32_C(19)
#define KELIVO_STATUS_SQLCIPHER_ATTACH_FAILED INT32_C(20)
#define KELIVO_STATUS_INVALID_OPAQUE_STATE_HANDLE INT32_C(21)
#define KELIVO_STATUS_OPAQUE_MESSAGE_INVALID INT32_C(22)
#define KELIVO_STATUS_OPAQUE_PROTOCOL_FAILED INT32_C(23)
#define KELIVO_STATUS_TOO_MANY_ACTIVE_HANDLES INT32_C(24)
#define KELIVO_STATUS_HANDLE_SPACE_EXHAUSTED INT32_C(25)
#define KELIVO_STATUS_INVALID_ACCOUNT_ID INT32_C(26)
#define KELIVO_STATUS_INVALID_DEVICE_IDENTITY_HANDLE INT32_C(27)
#define KELIVO_STATUS_INVALID_ACCOUNT_ROOT_KEY_HANDLE INT32_C(28)
#define KELIVO_STATUS_DEVICE_MESSAGE_INVALID INT32_C(29)
#define KELIVO_STATUS_DEVICE_AUTHENTICATION_FAILED INT32_C(30)
#define KELIVO_STATUS_DEVICE_STATE_INVALID INT32_C(31)
#define KELIVO_STATUS_DEVICE_STATE_AUTHENTICATION_FAILED INT32_C(32)
#define KELIVO_STATUS_INVALID_PENDING_PAIRING_HANDLE INT32_C(33)
#define KELIVO_STATUS_PAIRING_EXPIRED INT32_C(34)
#define KELIVO_STATUS_PENDING_PAIRING_STATE_INVALID INT32_C(35)
#define KELIVO_STATUS_INVALID_ATTACHMENT_DATA_KEY_HANDLE INT32_C(36)
#define KELIVO_STATUS_ATTACHMENT_ENVELOPE_INVALID INT32_C(37)
#define KELIVO_STATUS_ATTACHMENT_AUTHENTICATION_FAILED INT32_C(38)
#define KELIVO_STATUS_SLOT_IN_USE INT32_C(39)
#define KELIVO_STATUS_INVALID_RECOVERY_HANDLE INT32_C(40)
#define KELIVO_STATUS_RECOVERY_CAPSULE_INVALID INT32_C(41)
#define KELIVO_STATUS_RECOVERY_CAPSULE_AUTHENTICATION_FAILED INT32_C(42)
#define KELIVO_STATUS_RECOVERY_MEDIA_INVALID INT32_C(43)
#define KELIVO_STATUS_RECOVERY_MEDIA_AUTHENTICATION_FAILED INT32_C(44)
#define KELIVO_STATUS_RECOVERY_GENESIS_INVALID INT32_C(45)
#define KELIVO_STATUS_RECOVERY_ORIGIN_MISMATCH INT32_C(46)
#define KELIVO_STATUS_RECOVERY_PASSPHRASE_INVALID INT32_C(47)
#define KELIVO_STATUS_RECOVERY_HISTORY_INVALID INT32_C(48)
#define KELIVO_STATUS_RECOVERY_HISTORY_AUTHENTICATION_FAILED INT32_C(49)
#define KELIVO_STATUS_UNSUPPORTED_PLATFORM INT32_C(100)
#define KELIVO_SECURE_STORAGE_BACKEND_NONE UINT32_C(0)
#define KELIVO_SECURE_STORAGE_BACKEND_WINDOWS_DPAPI UINT32_C(1)
#define KELIVO_SECURE_STORAGE_BACKEND_ANDROID_KEYSTORE UINT32_C(2)
#define KELIVO_SECURE_STORAGE_BACKEND_LINUX_SECRET_SERVICE UINT32_C(3)
#define KELIVO_SECURE_STORAGE_BACKEND_IOS_KEYCHAIN UINT32_C(4)
#define KELIVO_CAPABILITY_FLAGS_NONE UINT64_C(0)
#define KELIVO_CAPABILITY_KEY_SLOTS (UINT64_C(1) << 0)
#define KELIVO_CAPABILITY_BACKGROUND_ACCESS (UINT64_C(1) << 1)
#define KELIVO_CAPABILITY_RECORD_ENVELOPES (UINT64_C(1) << 2)
#define KELIVO_CAPABILITY_SQLCIPHER_KEY_APPLICATION (UINT64_C(1) << 3)
#define KELIVO_CAPABILITY_SQLCIPHER_DATABASE_ATTACH (UINT64_C(1) << 4)
#define KELIVO_CAPABILITY_OPAQUE_CLIENT (UINT64_C(1) << 5)
#define KELIVO_CAPABILITY_DEVICE_E2EE_CORE (UINT64_C(1) << 6)
#define KELIVO_CAPABILITY_ATTACHMENT_CRYPTO (UINT64_C(1) << 7)
#define KELIVO_CAPABILITY_ACCOUNT_TRUST_SIGNING (UINT64_C(1) << 8)
#define KELIVO_CAPABILITY_RECOVERY_MEDIA (UINT64_C(1) << 9)
#define KELIVO_RECORD_ID_SIZE ((size_t)16)
#define KELIVO_RECORD_ENTITY_KEY_MAX_SIZE ((size_t)2048)
#define KELIVO_RECORD_MAX_ASSOCIATED_DATA_SIZE ((size_t)(64 * 1024))
typedef struct KelivoDeviceStateBinding {
    uint32_t struct_size;
    uint32_t flags;
    uint8_t device_id[KELIVO_DEVICE_UUID_SIZE];
    uint32_t key_version;
    uint8_t user_id[KELIVO_DEVICE_UUID_SIZE];
    uint32_t key_epoch;
} KelivoDeviceStateBinding;
typedef struct KelivoRecoveryCapsuleBinding {
    uint32_t struct_size;
    uint8_t user_id[KELIVO_DEVICE_UUID_SIZE];
    uint32_t key_epoch;
    uint32_t capsule_version;
} KelivoRecoveryCapsuleBinding;
typedef struct KelivoRecoveryMediaExportAuthority {
    uint32_t struct_size;
    uint8_t initial_capsule[KELIVO_RECOVERY_CAPSULE_SIZE];
    uint64_t local_epoch_one_ark_handle;
} KelivoRecoveryMediaExportAuthority;
typedef int32_t (*KelivoSqlCipherKeyCallback)(
    void *database,
    const void *key,
    int32_t key_length);
typedef int32_t (*KelivoSqlitePrepareCallback)(
    void *database,
    const char *sql,
    int32_t sql_length,
    void **out_statement,
    const char **sql_tail);
typedef void (*KelivoSqliteDestructor)(void *value);
typedef int32_t (*KelivoSqliteBindTextCallback)(
    void *statement,
    int32_t index,
    const char *value,
    int32_t value_length,
    KelivoSqliteDestructor destructor);
typedef int32_t (*KelivoSqliteBindBlobCallback)(
    void *statement,
    int32_t index,
    const void *value,
    int32_t value_length,
    KelivoSqliteDestructor destructor);
typedef int32_t (*KelivoSqliteStepCallback)(void *statement);
typedef int32_t (*KelivoSqliteFinalizeCallback)(void *statement);
/*
 * 固定为 32 字节的 ABI v1 能力结构。reserved 字段必须忽略；
 * 任何扩大结构的变更都必须提升 ABI 并新增函数，禁止改变本结构大小。
 */
typedef struct KelivoCoreCapabilities {
  uint32_t struct_size;
  uint32_t abi_version;
  uint64_t flags;
  uint32_t secure_storage_backend;
  uint32_t reserved[3];
} KelivoCoreCapabilities;
/*
 * 状态绑定与秘密经过同一 AEAD 认证；认证成功前不得发布绑定或任何句柄。
 * identity-only 成功时 binding 不含 ACCOUNT 标志且 out_ark_handle 保持零；
 * 完整态成功时绑定包含账户与 epoch，两个句柄都有效。
 */
KELIVO_CORE_API KelivoStatus kelivo_device_state_open(
    uint64_t key_handle,
    const uint8_t *blob,
    size_t blob_length,
    KelivoDeviceStateBinding *out_binding,
    uint64_t *out_identity_handle,
    uint64_t *out_ark_handle);
/*
 * 生成独立恢复 X25519 身份；私钥只存在于不透明句柄。失败时句柄、长度和
 * 可写输出范围均清零。recovery_public_key_version 必须为正整数。
 */
KELIVO_CORE_API KelivoStatus kelivo_recovery_identity_generate(
    const uint8_t *user_id,
    size_t user_id_length,
    uint32_t recovery_public_key_version,
    uint64_t *out_handle,
    uint8_t *out_public_key,
    size_t out_public_key_capacity,
    size_t *out_public_key_length);
/* 关闭未消费的恢复句柄；使用中返回 SLOT_IN_USE，禁止并发关闭。 */
KELIVO_CORE_API KelivoStatus kelivo_recovery_handle_close(
    uint64_t recovery_handle);
/*
 * 用指定账户和精确 ARK epoch 密封固定 156 字节 capsule。恢复公钥、版本、
 * capsule 版本及完整 76 字节头均被 HPKE 认证。
 */
KELIVO_CORE_API KelivoStatus kelivo_recovery_capsule_seal(
    uint64_t ark_handle,
    const uint8_t *user_id,
    size_t user_id_length,
    uint32_t key_epoch,
    uint32_t recovery_public_key_version,
    uint32_t capsule_version,
    const uint8_t *recovery_public_key,
    size_t recovery_public_key_length,
    uint8_t *out_capsule,
    size_t out_capsule_capacity,
    size_t *out_capsule_length);
/*
 * 仅接受本地 epoch-1 ARK、对应初始 capsule、严格有效的 444 字节 genesis
 * 清单和独立恢复口令，输出固定 644 字节二进制帧。三者的账户信任根、
 * capsule 摘要与 capsule 内 ARK 必须一致；不会导出任何明文秘密。
 */
KELIVO_CORE_API KelivoStatus kelivo_recovery_media_export(
    uint64_t recovery_handle,
    const KelivoRecoveryMediaExportAuthority *authority,
    const uint8_t *genesis,
    size_t genesis_length,
    const uint8_t *passphrase,
    size_t passphrase_length,
    const uint8_t *service_origin_sha256,
    size_t service_origin_sha256_length,
    uint8_t *out_media,
    size_t out_media_capacity,
    size_t *out_media_length);
/*
 * history 是从 genesis 开始、按每份清单自描述长度直接串联的完整连续历史；
 * 第一份必须逐字节等于介质内 genesis。一次调用内认证口令与服务源、验证全部
 * 状态转换和双签名，再把链头精确绑定到 capsule。链头 epoch=1 时禁止 source；
 * epoch>1 时 source 必须精确等于最近轮换直接前驱 capsule，成功返回相邻两代
 * ARK 的不透明 keyring；失败不会发布任何秘密句柄。
 */
KELIVO_CORE_API KelivoStatus kelivo_recovery_media_import_history_verify_and_capsule_open(
    const uint8_t *media,
    size_t media_length,
    const uint8_t *passphrase,
    size_t passphrase_length,
    const uint8_t *expected_service_origin_sha256,
    size_t expected_service_origin_sha256_length,
    const uint8_t *membership_history,
    size_t membership_history_length,
    const uint8_t *source_capsule,
    size_t source_capsule_length,
    const uint8_t *current_capsule,
    size_t current_capsule_length,
    KelivoRecoveryCapsuleBinding *out_binding,
    uint64_t *out_ark_handle);