dependencies/kelivo_secure_core/lib/kelivo_secure_core_bindings_generated.dart


@ffi.Native<
  KelivoStatus Function(
    ffi.Uint64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<KelivoDeviceStateBinding>,
    ffi.Pointer<ffi.Uint64>,
    ffi.Pointer<ffi.Uint64>,
  )
>()
external int kelivo_device_state_open(
  int key_handle,
  ffi.Pointer<ffi.Uint8> blob,
  int blob_length,
  ffi.Pointer<KelivoDeviceStateBinding> out_binding,
  ffi.Pointer<ffi.Uint64> out_identity_handle,
  ffi.Pointer<ffi.Uint64> out_ark_handle,
);

@ffi.Native<
  KelivoStatus Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint64>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>()
external int kelivo_recovery_identity_generate(
  ffi.Pointer<ffi.Uint8> user_id,
  int user_id_length,
  int recovery_public_key_version,
  ffi.Pointer<ffi.Uint64> out_handle,
  ffi.Pointer<ffi.Uint8> out_public_key,
  int out_public_key_capacity,
  ffi.Pointer<ffi.Size> out_public_key_length,
);

@ffi.Native<KelivoStatus Function(ffi.Uint64)>()
external int kelivo_recovery_handle_close(int recovery_handle);

@ffi.Native<
  KelivoStatus Function(
    ffi.Uint64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>()
external int kelivo_recovery_capsule_seal(
  int ark_handle,
  ffi.Pointer<ffi.Uint8> user_id,
  int user_id_length,
  int key_epoch,
  int recovery_public_key_version,
  int capsule_version,
  ffi.Pointer<ffi.Uint8> recovery_public_key,
  int recovery_public_key_length,
  ffi.Pointer<ffi.Uint8> out_capsule,
  int out_capsule_capacity,
  ffi.Pointer<ffi.Size> out_capsule_length,
);

@ffi.Native<
  KelivoStatus Function(
    ffi.Uint64,
    ffi.Pointer<KelivoRecoveryMediaExportAuthority>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>()
external int kelivo_recovery_media_export(
  int recovery_handle,
  ffi.Pointer<KelivoRecoveryMediaExportAuthority> authority,
  ffi.Pointer<ffi.Uint8> genesis,
  int genesis_length,
  ffi.Pointer<ffi.Uint8> passphrase,
  int passphrase_length,
  ffi.Pointer<ffi.Uint8> service_origin_sha256,
  int service_origin_sha256_length,
  ffi.Pointer<ffi.Uint8> out_media,
  int out_media_capacity,
  ffi.Pointer<ffi.Size> out_media_length,
);

@ffi.Native<
  KelivoStatus Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<KelivoRecoveryCapsuleBinding>,
    ffi.Pointer<ffi.Uint64>,
  )
>()
external int kelivo_recovery_media_import_history_verify_and_capsule_open(
  ffi.Pointer<ffi.Uint8> media,
  int media_length,
  ffi.Pointer<ffi.Uint8> passphrase,
  int passphrase_length,
  ffi.Pointer<ffi.Uint8> expected_service_origin_sha256,
  int expected_service_origin_sha256_length,
  ffi.Pointer<ffi.Uint8> membership_history,
  int membership_history_length,
  ffi.Pointer<ffi.Uint8> source_capsule,
  int source_capsule_length,
  ffi.Pointer<ffi.Uint8> current_capsule,
  int current_capsule_length,
  ffi.Pointer<KelivoRecoveryCapsuleBinding> out_binding,
  ffi.Pointer<ffi.Uint64> out_ark_handle,
);

typedef KelivoStatus = ffi.Int32;
typedef DartKelivoStatus = int;

final class KelivoDeviceStateBinding extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint32()
  external int flags;

  @ffi.Array.multi([16])
  external ffi.Array<ffi.Uint8> device_id;

  @ffi.Uint32()
  external int key_version;

  @ffi.Array.multi([16])
  external ffi.Array<ffi.Uint8> user_id;

  @ffi.Uint32()
  external int key_epoch;
}

final class KelivoRecoveryCapsuleBinding extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Array.multi([16])
  external ffi.Array<ffi.Uint8> user_id;

  @ffi.Uint32()
  external int key_epoch;

  @ffi.Uint32()
  external int capsule_version;
}

final class KelivoRecoveryMediaExportAuthority extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Array.multi([156])
  external ffi.Array<ffi.Uint8> initial_capsule;

  @ffi.Uint64()
  external int local_epoch_one_ark_handle;
}

typedef KelivoSqlCipherKeyCallbackFunction =
    ffi.Int32 Function(
      ffi.Pointer<ffi.Void> database,
      ffi.Pointer<ffi.Void> key,
      ffi.Int32 key_length,
    );
typedef DartKelivoSqlCipherKeyCallbackFunction =
    int Function(
      ffi.Pointer<ffi.Void> database,
      ffi.Pointer<ffi.Void> key,
      int key_length,
    );
typedef KelivoSqlCipherKeyCallback =
    ffi.Pointer<ffi.NativeFunction<KelivoSqlCipherKeyCallbackFunction>>;
typedef KelivoSqlitePrepareCallbackFunction =
    ffi.Int32 Function(
      ffi.Pointer<ffi.Void> database,
      ffi.Pointer<ffi.Char> sql,
      ffi.Int32 sql_length,
      ffi.Pointer<ffi.Pointer<ffi.Void>> out_statement,
      ffi.Pointer<ffi.Pointer<ffi.Char>> sql_tail,
    );
typedef DartKelivoSqlitePrepareCallbackFunction =
    int Function(
      ffi.Pointer<ffi.Void> database,
      ffi.Pointer<ffi.Char> sql,
      int sql_length,
      ffi.Pointer<ffi.Pointer<ffi.Void>> out_statement,
      ffi.Pointer<ffi.Pointer<ffi.Char>> sql_tail,
    );
typedef KelivoSqlitePrepareCallback =
    ffi.Pointer<ffi.NativeFunction<KelivoSqlitePrepareCallbackFunction>>;
typedef KelivoSqliteDestructorFunction =
    ffi.Void Function(ffi.Pointer<ffi.Void> value);
typedef DartKelivoSqliteDestructorFunction =
    void Function(ffi.Pointer<ffi.Void> value);
typedef KelivoSqliteDestructor =
    ffi.Pointer<ffi.NativeFunction<KelivoSqliteDestructorFunction>>;
typedef KelivoSqliteBindTextCallbackFunction =
    ffi.Int32 Function(
      ffi.Pointer<ffi.Void> statement,
      ffi.Int32 index,
      ffi.Pointer<ffi.Char> value,
      ffi.Int32 value_length,
      KelivoSqliteDestructor destructor,
    );
typedef DartKelivoSqliteBindTextCallbackFunction =
    int Function(
      ffi.Pointer<ffi.Void> statement,
      int index,
      ffi.Pointer<ffi.Char> value,
      int value_length,
      KelivoSqliteDestructor destructor,
    );
typedef KelivoSqliteBindTextCallback =
    ffi.Pointer<ffi.NativeFunction<KelivoSqliteBindTextCallbackFunction>>;
typedef KelivoSqliteBindBlobCallbackFunction =
    ffi.Int32 Function(
      ffi.Pointer<ffi.Void> statement,
      ffi.Int32 index,
      ffi.Pointer<ffi.Void> value,
      ffi.Int32 value_length,
      KelivoSqliteDestructor destructor,
    );
typedef DartKelivoSqliteBindBlobCallbackFunction =
    int Function(
      ffi.Pointer<ffi.Void> statement,
      int index,
      ffi.Pointer<ffi.Void> value,
      int value_length,
      KelivoSqliteDestructor destructor,
    );
typedef KelivoSqliteBindBlobCallback =
    ffi.Pointer<ffi.NativeFunction<KelivoSqliteBindBlobCallbackFunction>>;
typedef KelivoSqliteStepCallbackFunction =
    ffi.Int32 Function(ffi.Pointer<ffi.Void> statement);
typedef DartKelivoSqliteStepCallbackFunction =
    int Function(ffi.Pointer<ffi.Void> statement);
typedef KelivoSqliteStepCallback =
    ffi.Pointer<ffi.NativeFunction<KelivoSqliteStepCallbackFunction>>;
typedef KelivoSqliteFinalizeCallbackFunction =
    ffi.Int32 Function(ffi.Pointer<ffi.Void> statement);
typedef DartKelivoSqliteFinalizeCallbackFunction =
    int Function(ffi.Pointer<ffi.Void> statement);
typedef KelivoSqliteFinalizeCallback =
    ffi.Pointer<ffi.NativeFunction<KelivoSqliteFinalizeCallbackFunction>>;

final class KelivoCoreCapabilities extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint32()
  external int abi_version;

  @ffi.Uint64()
  external int flags;

  @ffi.Uint32()
  external int secure_storage_backend;

  @ffi.Array.multi([3])
  external ffi.Array<ffi.Uint32> reserved;
}

const int KELIVO_CORE_ABI_VERSION = 15;

const int KELIVO_CORE_CAPABILITIES_STRUCT_SIZE = 32;

const int KELIVO_KEY_SLOT_ID_SIZE = 16;

const int KELIVO_KEY_POLICY_VERSION = 1;

const int KELIVO_INVALID_KEY_HANDLE = 0;

const int KELIVO_STATUS_OK = 0;

const int KELIVO_STATUS_NULL_POINTER = 1;

const int KELIVO_STATUS_INVALID_SLOT_ID_LENGTH = 2;

const int KELIVO_STATUS_UNSUPPORTED_POLICY = 3;

const int KELIVO_STATUS_INVALID_KEY_HANDLE = 4;

const int KELIVO_STATUS_OUTPUT_BUFFER_TOO_SMALL = 5;

const int KELIVO_STATUS_SLOT_NOT_FOUND = 6;

const int KELIVO_STATUS_SLOT_ALREADY_EXISTS = 7;

const int KELIVO_STATUS_SLOT_DATA_INVALID = 8;

const int KELIVO_STATUS_SLOT_UNWRAP_FAILED = 9;

const int KELIVO_STATUS_SECURE_STORAGE_UNAVAILABLE = 10;

const int KELIVO_STATUS_RANDOM_SOURCE_FAILURE = 11;

const int KELIVO_STATUS_IO_FAILURE = 12;

const int KELIVO_STATUS_INTERNAL_STATE = 13;

const int KELIVO_STATUS_INVALID_RECORD_ID_LENGTH = 14;

const int KELIVO_STATUS_INVALID_ARGUMENT = 15;

const int KELIVO_STATUS_RECORD_ENVELOPE_INVALID = 16;

const int KELIVO_STATUS_RECORD_AUTHENTICATION_FAILED = 17;

const int KELIVO_STATUS_INPUT_TOO_LARGE = 18;

const int KELIVO_STATUS_SQLCIPHER_KEY_FAILED = 19;

const int KELIVO_STATUS_SQLCIPHER_ATTACH_FAILED = 20;

const int KELIVO_STATUS_INVALID_OPAQUE_STATE_HANDLE = 21;

const int KELIVO_STATUS_OPAQUE_MESSAGE_INVALID = 22;

const int KELIVO_STATUS_OPAQUE_PROTOCOL_FAILED = 23;

const int KELIVO_STATUS_TOO_MANY_ACTIVE_HANDLES = 24;

const int KELIVO_STATUS_HANDLE_SPACE_EXHAUSTED = 25;

const int KELIVO_STATUS_INVALID_ACCOUNT_ID = 26;

const int KELIVO_STATUS_INVALID_DEVICE_IDENTITY_HANDLE = 27;

const int KELIVO_STATUS_INVALID_ACCOUNT_ROOT_KEY_HANDLE = 28;

const int KELIVO_STATUS_DEVICE_MESSAGE_INVALID = 29;

const int KELIVO_STATUS_DEVICE_AUTHENTICATION_FAILED = 30;

const int KELIVO_STATUS_DEVICE_STATE_INVALID = 31;

const int KELIVO_STATUS_DEVICE_STATE_AUTHENTICATION_FAILED = 32;

const int KELIVO_STATUS_INVALID_PENDING_PAIRING_HANDLE = 33;

const int KELIVO_STATUS_PAIRING_EXPIRED = 34;

const int KELIVO_STATUS_PENDING_PAIRING_STATE_INVALID = 35;

const int KELIVO_STATUS_INVALID_ATTACHMENT_DATA_KEY_HANDLE = 36;

const int KELIVO_STATUS_ATTACHMENT_ENVELOPE_INVALID = 37;

const int KELIVO_STATUS_ATTACHMENT_AUTHENTICATION_FAILED = 38;

const int KELIVO_STATUS_SLOT_IN_USE = 39;

const int KELIVO_STATUS_INVALID_RECOVERY_HANDLE = 40;

const int KELIVO_STATUS_RECOVERY_CAPSULE_INVALID = 41;

const int KELIVO_STATUS_RECOVERY_CAPSULE_AUTHENTICATION_FAILED = 42;

const int KELIVO_STATUS_RECOVERY_MEDIA_INVALID = 43;

const int KELIVO_STATUS_RECOVERY_MEDIA_AUTHENTICATION_FAILED = 44;

const int KELIVO_STATUS_RECOVERY_GENESIS_INVALID = 45;

const int KELIVO_STATUS_RECOVERY_ORIGIN_MISMATCH = 46;

const int KELIVO_STATUS_RECOVERY_PASSPHRASE_INVALID = 47;

const int KELIVO_STATUS_RECOVERY_HISTORY_INVALID = 48;

const int KELIVO_STATUS_RECOVERY_HISTORY_AUTHENTICATION_FAILED = 49;

const int KELIVO_STATUS_UNSUPPORTED_PLATFORM = 100;

const int KELIVO_SECURE_STORAGE_BACKEND_NONE = 0;

const int KELIVO_SECURE_STORAGE_BACKEND_WINDOWS_DPAPI = 1;

const int KELIVO_SECURE_STORAGE_BACKEND_ANDROID_KEYSTORE = 2;

const int KELIVO_SECURE_STORAGE_BACKEND_LINUX_SECRET_SERVICE = 3;

const int KELIVO_SECURE_STORAGE_BACKEND_IOS_KEYCHAIN = 4;

const int KELIVO_CAPABILITY_FLAGS_NONE = 0;

const int KELIVO_CAPABILITY_KEY_SLOTS = 1;

const int KELIVO_CAPABILITY_BACKGROUND_ACCESS = 2;

const int KELIVO_CAPABILITY_RECORD_ENVELOPES = 4;

const int KELIVO_CAPABILITY_SQLCIPHER_KEY_APPLICATION = 8;

const int KELIVO_CAPABILITY_SQLCIPHER_DATABASE_ATTACH = 16;

const int KELIVO_CAPABILITY_OPAQUE_CLIENT = 32;

const int KELIVO_CAPABILITY_DEVICE_E2EE_CORE = 64;

const int KELIVO_CAPABILITY_ATTACHMENT_CRYPTO = 128;

const int KELIVO_CAPABILITY_ACCOUNT_TRUST_SIGNING = 256;

const int KELIVO_CAPABILITY_RECOVERY_MEDIA = 512;

const int KELIVO_RECORD_ID_SIZE = 16;

const int KELIVO_RECORD_ENTITY_KEY_MAX_SIZE = 2048;

const int KELIVO_RECORD_MAX_ASSOCIATED_DATA_SIZE = 65536;
